# Sprinkle

./: .gitignore  ARCHITECTURE.md  README.md  config.yaml.example  pyproject.toml
docs/: API.md  ARCHITECTURE.md  CHECKLIST.md  CONTRIBUTING.md  TASKS-v2.1-AUDIT-FIX.md  TASKS-v2.md  TASKS.md
docs/design/: PERSISTENT-AUTH.md  phase3-design.md  phase4-design.md  phase5-design.md  phase6-design.md  phase7-design.md  push-notification-refactor.md
scripts/: create_tables.py  init_db.py  migration_v2.1_add_file_table.py  migration_v2.1_add_message_fields.py  migration_v2.1_fix_conversation_members_pk.py  migration_v2.2_add_agent_api_keys.py  migration_v2.2_add_push_tables.sql
src/sprinkle/: __init__.py  config.py  main.py
src/sprinkle/api/: __init__.py  agent_keys.py  auth.py  conversations.py  dependencies.py  events.py  files.py  members.py  messages.py  users.py  websocket.py
src/sprinkle/kernel/: __init__.py  auth.py  event.py  message.py  permission.py  session.py
src/sprinkle/models/: __init__.py  agent_api_key.py  conversation.py  conversation_member.py  file.py  message.py  push.py  user.py
src/sprinkle/plugins/: __init__.py  base.py  events.py  manager.py
tests/: __init__.py  conftest.py  test_agent_key_service.py  test_api.py  test_api_events.py  test_conversation_api.py  test_conversation_api_fixup.py  test_integration.py  test_kernel_session.py  test_phase1_init.py  test_phase2_kernel.py  test_phase3_plugins.py  test_phase4_api.py  test_phase5_websocket.py  test_phase6_business.py  test_push_system.py  test_storage_layered.py
(+15 files in other folders)
